# basyx-archive

./: .gitignore  Jenkinsfile  Jenkinsfile_CX  Jenkinsfile_Cpp  Jenkinsfile_Integration  Jenkinsfile_Java  NOTICE  README.md  dev-guide.docx
sdks/c++/basys.sdk.cc/: .cproject  .gitignore  .project  CMakeLists.txt  Makefile
sdks/c++/basys.sdk.cc/.svn/: wc.db
sdks/c++/basys.sdk.cc/backends/protocols/basyx/: BaSyxNativeAASManager.cc  BaSyxNativeAASManager.h  BaSyxNativeConnector.h  BaSyxNativeProviderServer.h
sdks/c++/basys.sdk.cc/backends/protocols/connector/: IBaSysConnector.h
sdks/c++/basys.sdk.cc/backends/provider/cxx/: CXXModelProvider.cc  CXXModelProvider.h
sdks/c++/basys.sdk.cc/backends/provider/cxxhandler/: CXXHandler.h
sdks/c++/basys.sdk.cc/backends/provider/json/: JSONProvider.h
sdks/c++/basys.sdk.cc/cmake/: diagnostics_print.cmake  enable_clang_tidy.cmake  enable_cppcheck.cmake  enable_playground.cmake
sdks/c++/basys.sdk.cc/include/BaSyx/abstraction/: Net.h  Thread.h
sdks/c++/basys.sdk.cc/include/BaSyx/log/: log.h
sdks/c++/basys.sdk.cc/include/BaSyx/server/: BaSyxNativeProvider.h  BaSyxTCPServer.h  TCPSelectServer.h  TCPServer.h
sdks/c++/basys.sdk.cc/include/BaSyx/shared/: anyTypeChecker.h  enums.h  object.h  types.h
sdks/c++/basys.sdk.cc/include/BaSyx/util/: function_traits.h  invoke.h  make_function.h  util.h
sdks/c++/basys.sdk.cc/include/BaSyx/vab/: ElementMap.h
sdks/c++/basys.sdk.cc/lib/asio/: CMakeLists.txt
sdks/c++/basys.sdk.cc/lib/gtest/: CMakeLists.txt
sdks/c++/basys.sdk.cc/lib/json/: CMakeLists.txt
sdks/c++/basys.sdk.cc/lib/json/json/: json.hpp
sdks/c++/basys.sdk.cc/lib/open62541/: CMakeLists.txt
sdks/c++/basys.sdk.cc/lib/open62541/tools/: generate_datatypes.py
sdks/c++/basys.sdk.cc/regression/: CMakeLists.txt  main.cpp  test_support.mk  tests.mk
sdks/c++/basys.sdk.cc/regression/aas/: CMakeLists.txt  DeviceAAS.cc  DeviceAAS.h  test_deviceaas.cc  tests_aas.mk
sdks/c++/basys.sdk.cc/regression/backends/: CMakeLists.txt
sdks/c++/basys.sdk.cc/regression/basysid/: CMakeLists.txt  Makefile  test_basysid_1.cc  test_basysid_2.cc
sdks/c++/basys.sdk.cc/regression/bref/: CMakeLists.txt  Makefile  test_bref.cc  tests_bref.mk
sdks/c++/basys.sdk.cc/regression/fundamentals/: CMakeLists.txt  test_basyx_any.cc
sdks/c++/basys.sdk.cc/regression/ielement/: test_ielement_1.cc
sdks/c++/basys.sdk.cc/regression/json/: CMakeLists.txt  Makefile  test_json_deserialize.cc  test_json_serialize.cc
sdks/c++/basys.sdk.cc/regression/json/tests/: AllTests.cpp  SDK_Tests.cpp
sdks/c++/basys.sdk.cc/regression/parameter/: CMakeLists.txt  test_parameter.cc  tests_parameter.mk
sdks/c++/basys.sdk.cc/regression/protocols/basyx/: Provider.cpp  User.cpp
sdks/c++/basys.sdk.cc/regression/provider/: .gitignore  CMakeLists.txt
sdks/c++/basys.sdk.cc/regression/provider/cxx/: test_submodelprovider.cc  tests_provider_cxx.mk
sdks/c++/basys.sdk.cc/regression/provider/cxxhandler/: Makefile  test_cxxhandler.cpp
sdks/c++/basys.sdk.cc/regression/provider/hashmap/: test_hashmap.cpp  test_hashmap_collection.cpp  test_hashmap_map.cpp
sdks/c++/basys.sdk.cc/regression/provider/json/: test_jsonprovider.cpp
sdks/c++/basys.sdk.cc/regression/submodels/: CMakeLists.txt  DeviceStatusSubModel.cc  DeviceStatusSubModel.h  test_devicestatussm.cc  tests_parameter.mk
sdks/c++/basys.sdk.cc/regression/support/gtest/: gtest-all.cc  gtest.h
sdks/c++/basys.sdk.cc/regression/tests/: main.cpp  tests.mk
sdks/c++/basys.sdk.cc/regression/tests/aas/: DeviceAAS.cc  DeviceAAS.h  Makefile  test_deviceaas.cc  tests_aas.mk
sdks/c++/basys.sdk.cc/regression/tests/basysid/: Makefile  test_basysid_1.cc  test_basysid_2.cc  tests_basysid.mk
sdks/c++/basys.sdk.cc/regression/tests/bref/: Makefile  test_bref.cc  tests_bref.mk
sdks/c++/basys.sdk.cc/regression/tests/ielement/: Makefile  test_ielement_1.cc  tests_ielement.mk
sdks/c++/basys.sdk.cc/regression/tests/json/: Makefile  test_json.cc  test_json_deserialize.cc  test_json_serialize.cc  tests_json.mk
sdks/c++/basys.sdk.cc/regression/tests/parameter/: Makefile  test_parameter.cc  tests_parameter.mk
sdks/c++/basys.sdk.cc/regression/typertti/: CMakeLists.txt  test_array.cc  test_null.cc  test_primitives.cc  test_string.cc  tests_typertti.mk
sdks/c++/basys.sdk.cc/regression/vab/: CMakeLists.txt  test_vabPath.cpp  test_vab_elementproxy.cpp
sdks/c++/basys.sdk.cc/src/: basyx.mk
sdks/c++/basys.sdk.cc/src/aas/: AssetAdministrationShell.h  BaSyxAASConfig.cmake.in  CMakeLists.txt  RTTIMacros.h  SubModel.h
sdks/c++/basys.sdk.cc/src/abstraction/: BaSyxAbstractionConfig.cmake.in  CMakeLists.txt  Net.h  Thread.h
sdks/c++/basys.sdk.cc/src/api/: IAASManager.h  IAssetAdministrationShell.h  IElement.h  IElementRef.h  IModelProvider.h  IProperty.h  ISingleProperty.h  ISubModel.h
sdks/c++/basys.sdk.cc/src/backends/: CMakeLists.txt
sdks/c++/basys.sdk.cc/src/basysid/: BaSysID.h
sdks/c++/basys.sdk.cc/src/basyx/: CMakeLists.txt
sdks/c++/basys.sdk.cc/src/basyx/json/: json.h  (+6 more)
sdks/c++/basys.sdk.cc/src/controlcomponent/: CMakeLists.txt
sdks/c++/basys.sdk.cc/src/json/: JSONTools.cpp  JSONTools.h
sdks/c++/basys.sdk.cc/src/logging/: BaSyxLogConfig.cmake.in  CMakeLists.txt
sdks/c++/basys.sdk.cc/src/objectprovider/: ObjectProvider.cc
sdks/c++/basys.sdk.cc/src/opcua/: CMakeLists.txt
sdks/c++/basys.sdk.cc/src/parameter/: BParameter.h
sdks/c++/basys.sdk.cc/src/ref/: BRef.h
sdks/c++/basys.sdk.cc/src/server/: BaSyxServerConfig.cmake.in  CMakeLists.txt
sdks/c++/basys.sdk.cc/src/shared/: BaSyxSharedConfig.cmake.in  CMakeLists.txt
sdks/c++/basys.sdk.cc/src/submodel/: BaSyxSubmodelConfig.cmake.in  CMakeLists.txt
sdks/c++/basys.sdk.cc/src/types/: BArray.h  BNullObject.h  BObject.cc  BObject.h  BObjectCollection.h  BObjectMap.h  BString.h  BType.h  BValue.h  BaSysTypes.h
sdks/c++/basys.sdk.cc/src/utility/: BaSyxUtilConfig.cmake.in  CMakeLists.txt
sdks/c++/basys.sdk.cc/src/vab/: BaSyxVABConfig.cmake.in  CMakeLists.txt
sdks/c++/basys.sdk.cc/tests/: CMakeLists.txt
sdks/c++/basys.sdk.cc/tests/support/: CMakeLists.txt  macros.h
(+5531 files in other folders)
